Make swagger for auth route and role
