# src/controllers/auth/routes.ts
@@ -6,8 +6,7 @@ import { Identify } from '../../constants';
 export const authRoutes = Express.Router();
 
 authRoutes.route('/sign-up').post(Controller.signUpAccount);
-authRoutes.route('/verify-account').put(Controller.verifyAccount);
-authRoutes.route('/verify-otp-forgot-password').post(Controller.verifyOtpForResetPassword);
+authRoutes.route('/verify-otp').post(Controller.verifyOtp);
 authRoutes.route('/resend-otp/reset-password').post(Controller.resendOtpForConfirmResetPass);
 authRoutes.route('/resend-otp/confirm-email').post(Controller.resendOtpForConfirmEmail);
 authRoutes.route('/sign-in').post(Controller.signIn);
