# src/controllers/role/controller.ts
@@ -13,10 +13,11 @@ export const createRole = async (req: Request, res: Response, next: NextFunction
 };
 
 export const editRole = async (req: Request, res: Response, next: NextFunction) => {
-    const { _id, name, description, identify } = req.body;
+    const { _id } = req.params;
+    const { name, description, identify } = req.body;
 
     try {
-        const result = await RoleQuery.updateOne({ _id }, { name, description });
+        const result = await RoleQuery.updateOne({ _id }, { name, description, identify });
         return next(createHttpSuccess(200, result));
     } catch (error) {
         return next(error);
@@ -24,7 +25,7 @@ export const editRole = async (req: Request, res: Response, next: NextFunction) 
 };
 
 export const deleteRole = async (req: Request, response: Response, next: NextFunction) => {
-    const { _id } = req.body;
+    const { _id } = req.params;
 
     try {
         const result = await RoleQuery.findOneAndDelete({ _id });
@@ -36,7 +37,9 @@ export const deleteRole = async (req: Request, response: Response, next: NextFun
 
 export const getListRole = async (req: Request, res: Response, next: NextFunction) => {
     try {
-        const result = await RoleQuery.find();
+        const result = await RoleQuery.find()
+            .select({ createdAt: false, updatedAt: false, __v: false })
+            .sort('identify');
         return next(createHttpSuccess(200, result));
     } catch (error) {
         return next(error);
